--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,21 @@ pids
 *.pid
 *.seed
 *.pid.lock
+# yarn.lock
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+.cursorrules
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Keep example file
+!.env.example
+
+# Prisma
+prisma/*.db
+prisma/migrations/
